--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -49,7 +49,7 @@ ion-menu.md ion-item {
   border-radius: 4px;
 }
 
-ion-menu.md ion-item.selected {
+ion-menu ion-item.selected {
   --background: rgba(var(--ion-color-primary-rgb), 0.14);
 }
 
