--- a/src/app/pages/quiz/quiz.page.html
+++ b/src/app/pages/quiz/quiz.page.html
@@ -8,23 +8,31 @@
 </ion-header>
 
 <ion-content>
-
+    <ion-item (click)="showParticipantList = !showParticipantList">
+        {{quiz?.participants.length}} deelnemers ({{progressOfParticipants()}})
+        <ion-icon [name]="showParticipantList ? 'chevron-down-outline' : 'chevron-up-outline'" slot="end"></ion-icon>
+    </ion-item>
+    <ion-progress-bar color="secondary" [value]="progressOfParticipants()"></ion-progress-bar>
+<!--    todo create component-->
+    <ion-list *ngIf="showParticipantList">
+        <ng-container *ngFor="let participant of quiz?.participants">
+            <ion-item>{{participant.naam}} {{participant.questions}}
+            </ion-item>
+            <ion-progress-bar color="secondary" [value]="progressOfParticipant(participant)"></ion-progress-bar>
+        </ng-container>
+    </ion-list>
     <ion-card>
         <ion-card-header>
             <ion-card-title>
-                {{quiz?.beschrijving}}
+                {{quiz?.beschrijving}} {{quiz?.aantalVragen}}
             </ion-card-title>
             <ion-card-subtitle>
                 {{quiz?.id}}
             </ion-card-subtitle>
         </ion-card-header>
         <ion-card-content>
-            <ion-list>
-                <ion-item *ngFor="let participant of quiz?.participants">
-                    {{participant.naam}} ({{participant.questions}})
-                </ion-item>
-            </ion-list>
         </ion-card-content>
     </ion-card>
-<ion-button expand="block" color="secondary" (click)="createQuestion()">Voeg vraag toe</ion-button>
+    <ion-button expand="block" color="secondary" (click)="createQuestion()">Voeg vraag toe</ion-button>
+    <ion-button expand="block" color="secondary" (click)="startQuiz()">Start de Quiz</ion-button>
 </ion-content>
