--- a/src/app/pages/play/play.page.html
+++ b/src/app/pages/play/play.page.html
@@ -1,9 +1,42 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>play</ion-title>
-  </ion-toolbar>
+    <ion-toolbar color="primary">
+        <ion-buttons slot="start">
+            <ion-menu-button></ion-menu-button>
+        </ion-buttons>
+        <ion-title>quiz</ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content>
+    <ion-card *ngIf="question?.vraag && !isAnswered">
+        <ion-card-header>
+            <ion-card-title class="ion-text-wrap">
+                {{question?.vraag}}
+            </ion-card-title>
+            <ion-card-subtitle>
+         {{question?.owner?.naam}}
+            </ion-card-subtitle>
+        </ion-card-header>
+        <ion-card-content>
+        </ion-card-content>
+    <ion-button expand="block" color="secondary" (click)="setAnswer(question?.a)">{{question?.a}}
+    </ion-button>
+    <ion-button expand="block" color="secondary" (click)="setAnswer(question?.b)">{{question?.b}}
+    </ion-button>
+    <ion-button expand="block" color="secondary" (click)="setAnswer(question?.c)">{{question?.c}}
+    </ion-button>
+    <ion-button expand="block" color="secondary" (click)="setAnswer(question?.d)">{{question?.d}}
+    </ion-button>
+    </ion-card>
+
+    <!--  todo only admin-->
+
+  <ion-item *ngIf="isAnswered">Wachten op de volgende vraag</ion-item>
+  <ion-item *ngIf="question?.isFinished">De quiz zit er op, kijk snel naar de stand</ion-item>
 
 </ion-content>
+<ion-footer><ion-toolbar>
+  <ion-button *ngIf="!question?.isFinished" expand="block" color="tertiary" (click)="setQuestionAnswered()">Volgende vraag
+  </ion-button>
+
+</ion-toolbar></ion-footer>
