changes styling of the app

--- a/src/app/components/create-question/create-question.component.html
+++ b/src/app/components/create-question/create-question.component.html
@@ -30,9 +30,14 @@
       <ion-input type="text"
                  formControlName="d"></ion-input>
     </ion-item>
-    <ion-button expand="block"
-                type="submit"
-                [disabled]="!createQuestionForm.valid">Opslaan
-    </ion-button>
   </form>
 </ion-content>
+<ion-footer class="ion-no-border">
+  <ion-toolbar color="secondary">
+    <ion-button expand="block"
+                type="submit"
+                color="secondary"
+                [disabled]="!createQuestionForm.valid">Opslaan
+    </ion-button>
+  </ion-toolbar>
+</ion-footer>
