--- a/src/app/components/create-quiz/create-quiz.component.html
+++ b/src/app/components/create-quiz/create-quiz.component.html
@@ -9,12 +9,12 @@
 <ion-content fullscreen>
     <form [formGroup]="createQuizForm" (ngSubmit)="onSubmit()">
         <ion-item>
-            <ion-label position="floating">Naam</ion-label>
+            <ion-label position="floating">Naam deelnemer</ion-label>
             <ion-input type="text"
                        formControlName="naam"></ion-input>
         </ion-item>
         <ion-item>
-            <ion-label position="floating">Beschrijving</ion-label>
+            <ion-label position="floating">Omschrijving quiz</ion-label>
             <ion-input type="text"
                        formControlName="beschrijving"></ion-input>
         </ion-item>
@@ -27,9 +27,14 @@
 
             </ion-input>
         </ion-item>
-        <ion-button expand="block"
+
+    </form>
+</ion-content>
+<ion-footer class="ion-no-border">
+    <ion-toolbar color="secondary">
+        <ion-button color="secondary" expand="block"
                     type="submit"
                     [disabled]="!createQuizForm.valid">Opslaan
         </ion-button>
-    </form>
-</ion-content>
+    </ion-toolbar>
+</ion-footer>
