--- a/src/app/components/join-quiz/join-quiz.component.html
+++ b/src/app/components/join-quiz/join-quiz.component.html
@@ -1,21 +1,29 @@
-<ion-header></ion-header> <ion-header translucent>
-  <ion-toolbar>
-    <ion-title>Join quiz</ion-title>
-    <ion-buttons slot="end">
-      <ion-button (click)="dismissModal()">Close</ion-button>
-    </ion-buttons>
-  </ion-toolbar>
+<ion-header></ion-header>
+<ion-header translucent>
+    <ion-toolbar>
+        <ion-title>Join quiz</ion-title>
+        <ion-buttons slot="end">
+            <ion-button (click)="dismissModal()">Close</ion-button>
+        </ion-buttons>
+    </ion-toolbar>
 </ion-header>
 <ion-content fullscreen>
-  <form [formGroup]="joinQuizForm" (ngSubmit)="onSubmit()">
-    <ion-item>
-      <ion-label position="floating">Naam</ion-label>
-      <ion-input type="text" formControlName="naam"></ion-input>
+    <ion-item class="ion-text-wrap">
+        Om deel te nemen aan een quiz heb je een quiz id nodig. Vraag het groepshoofd om het id.
     </ion-item>
-    <ion-item>
-      <ion-label position="floating">Quiz id</ion-label>
-      <ion-input type="text" formControlName="quizid"></ion-input>
-    </ion-item>
-    <ion-button expand="block" type="submit" [disabled]="!joinQuizForm.valid">Opslaan</ion-button>
-  </form>
+    <form [formGroup]="joinQuizForm" (ngSubmit)="onSubmit()">
+        <ion-item>
+            <ion-label position="floating">Naam deelnemer</ion-label>
+            <ion-input type="text" formControlName="naam"></ion-input>
+        </ion-item>
+        <ion-item>
+            <ion-label position="floating">Quiz id</ion-label>
+            <ion-input type="text" formControlName="quizid"></ion-input>
+        </ion-item>
+    </form>
 </ion-content>
+<ion-footer class="ion-no-border">
+    <ion-toolbar color="secondary">
+        <ion-button color="secondary" expand="block" type="submit" [disabled]="!joinQuizForm.valid">Opslaan</ion-button>
+    </ion-toolbar>
+</ion-footer>
