buttons weer binnen ion-content geplaatst ipv footer

--- a/src/app/components/create-quiz/create-quiz.component.html
+++ b/src/app/components/create-quiz/create-quiz.component.html
@@ -6,8 +6,8 @@
         </ion-buttons>
     </ion-toolbar>
 </ion-header>
-<form [formGroup]="createQuizForm" (ngSubmit)="onSubmit()">
-    <ion-content fullscreen>
+<ion-content fullscreen>
+    <form [formGroup]="createQuizForm" (ngSubmit)="onSubmit()">
         <ion-item>
             <ion-label position="floating">Naam deelnemer</ion-label>
             <ion-input type="text"
@@ -27,14 +27,9 @@
 
             </ion-input>
         </ion-item>
-
-    </ion-content>
-    <ion-footer class="ion-no-border">
-        <ion-toolbar color="secondary">
-            <ion-button color="secondary" expand="block"
-                        type="submit"
-                        [disabled]="!createQuizForm.valid">Opslaan
-            </ion-button>
-        </ion-toolbar>
-    </ion-footer>
-</form>
+        <ion-button expand="block"
+                    type="submit"
+                    [disabled]="!createQuizForm.valid">Opslaan
+        </ion-button>
+    </form>
+</ion-content>
