--- a/src/app/components/create-question/create-question.component.html
+++ b/src/app/components/create-question/create-question.component.html
@@ -1,47 +1,38 @@
 <ion-header translucent>
-    <ion-toolbar>
-        <ion-title>Maak Quiz aan</ion-title>
-        <ion-buttons slot="end">
-            <ion-button (click)="dismissModal()">Close</ion-button>
-        </ion-buttons>
-    </ion-toolbar>
+  <ion-toolbar>
+    <ion-title>Maak Quiz aan</ion-title>
+    <ion-buttons slot="end">
+      <ion-button (click)="dismissModal()">Close</ion-button>
+    </ion-buttons>
+  </ion-toolbar>
 </ion-header>
-<form [formGroup]="createQuestionForm" (ngSubmit)="onSubmit()">
-
-    <ion-content fullscreen>
-        <ion-item>
-            <ion-label position="floating">Vraag</ion-label>
-            <ion-input type="text"
-                       formControlName="vraag"></ion-input>
-        </ion-item>
-        <ion-item>
-            <ion-label position="floating">Antwoord A</ion-label>
-            <ion-input type="text"
-                       formControlName="a"></ion-input>
-        </ion-item>
-        <ion-item>
-            <ion-label position="floating">Antwoord B</ion-label>
-            <ion-input type="text"
-                       formControlName="b"></ion-input>
-        </ion-item>
-        <ion-item>
-            <ion-label position="floating">Antwoord C</ion-label>
-            <ion-input type="text"
-                       formControlName="c"></ion-input>
-        </ion-item>
-        <ion-item>
-            <ion-label position="floating">Antwoord D</ion-label>
-            <ion-input type="text"
-                       formControlName="d"></ion-input>
-        </ion-item>
-    </ion-content>
-    <ion-footer class="ion-no-border">
-        <ion-toolbar color="secondary">
-            <ion-button expand="block"
-                        type="submit"
-                        color="secondary"
-                        [disabled]="!createQuestionForm.valid">Opslaan
-            </ion-button>
-        </ion-toolbar>
-    </ion-footer>
-</form>
+<ion-content fullscreen>
+  <form [formGroup]="createQuestionForm" (ngSubmit)="onSubmit()">
+    <ion-item>
+      <ion-label position="floating">Vraag</ion-label>
+      <ion-input type="text"
+                 formControlName="vraag"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label position="floating">Antwoord A</ion-label>
+      <ion-input type="text"
+                 formControlName="a"></ion-input>
+    </ion-item>    <ion-item>
+      <ion-label position="floating">Antwoord B</ion-label>
+      <ion-input type="text"
+                 formControlName="b"></ion-input>
+    </ion-item>    <ion-item>
+      <ion-label position="floating">Antwoord C</ion-label>
+      <ion-input type="text"
+                 formControlName="c"></ion-input>
+    </ion-item>    <ion-item>
+      <ion-label position="floating">Antwoord D</ion-label>
+      <ion-input type="text"
+                 formControlName="d"></ion-input>
+    </ion-item>
+    <ion-button expand="block"
+                type="submit"
+                [disabled]="!createQuestionForm.valid">Opslaan
+    </ion-button>
+  </form>
+</ion-content>
