--- a/src/app/pages/play/play.page.html
+++ b/src/app/pages/play/play.page.html
@@ -32,14 +32,13 @@
             <ion-button expand="block" color="secondary" class="ion-text-wrap"
                         (click)="setAnswer(question?.d)">{{question?.d}}
             </ion-button>
-
         </ion-card-content>
     </ion-card>
 
     <!--  todo only admin-->
     <ion-item *ngIf="isAnswered">
         <ion-label>
-            Wachten op de volgende vraag
+            Wachten op de volgende vraag ({{question?.answers}}/{{aantalDeelnemers}})
         </ion-label>
     </ion-item>
     <ion-card *ngIf="question?.isFinished">
