--- a/src/app/pages/play/play.page.html
+++ b/src/app/pages/play/play.page.html
@@ -67,7 +67,7 @@
                             <ion-item lines="none">
                                 <ion-label>Vraag:{{answer.question.vraag}}</ion-label>
                             </ion-item>
-                            <ion-item *ngFor="let answer of line.answers">
+                            <ion-item>
                                 <ion-label>
                                     Antwoord: {{answer.answer}}
                                 </ion-label>
