--- a/src/app/pages/play/play.page.html
+++ b/src/app/pages/play/play.page.html
@@ -69,7 +69,7 @@
                             </ion-item>
                             <ion-item>
                                 <ion-label>
-                                    Antwoord: {{answer.answer}}
+                                    Antwoord: {{answer.answer}} {{answer.score}}
                                 </ion-label>
                             </ion-item>
                         </ng-container>
