--- a/src/app/pages/play/play.page.html
+++ b/src/app/pages/play/play.page.html
@@ -67,9 +67,9 @@
                             <ion-item lines="none">
                                 <ion-label class="ion-text-wrap">
                                     {{answer.question.vraag}}
-                                    <p>
-                                        Het antwoord: {{answer.answer}}
-                                    </p>
+<!--                                    <p>-->
+<!--                                        Het antwoord: {{answer.answer}}-->
+<!--                                    </p>-->
                                     <p>
                                         Jouw antwoord: {{answer.answer}}
                                     </p>
